updated version of hw after st review